--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,137 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  :root{
+    --orange: #F06400;
+  }
+
+  body {
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+      monospace;
+  }
+
+  .icon{
+    color: #F06400;
+  }
+
+  .btn:not(.nav-btns button){
+    background-color: #fff;
+    color: rgb(85, 85, 85);
+    padding: 10px 28px;
+    border-radius: 25px;
+    border: 1px solid rgb(85, 85, 85);
+  }
+  .btn:not(.nav-btns button):hover{
+    background-color: #F06400;
+    color: #fff;
+    border-color: #F06400;
+  }
+
+  .text-primary{
+    color: #F06400!important;
+  }
+
+  .navbar{
+    font-family:'Poppins', sans-serif;
+    -webkit-box-shadow: 0 3px 9px 3px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 3px 9px 3px rgba(0, 0, 0, 0.1);
+  }
+
+  #masculino{
+    font-weight: 700;
+    color: #F06400!important;
+  }
+
+
+  .nav-link:hover{
+    color: #F06400!important;
+  }
+
+  .nav-item{
+    border-bottom: 0.5px solid rgba(0, 0, 0, 0.05);
+  }
+
+  #products{
+    font-family:'Poppins', sans-serif;
+    padding-top: 190px;
+  }
+
+  .title{
+    font-weight: 700;
+    font-size: 2rem;
+    position: absolute;
+    color:#F06400;
+    top: 20%;
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
+
+  .active-filter-btn{
+    background-color: #F06400!important;
+    color: #fff!important;
+    border-color: #F06400!important;
+  }
+  .filter-button-group .btn:hover{
+    color: #fff!important;
+  }
+
+  #botao:focus{
+    background-color: #F06400!important;
+    color: #fff!important;
+    border-color: #F06400!important;
+  }
+
+  .item-img{
+    transition: 0.5s ease-in-out;
+  }
+  .item-img:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+  }
+
+  .card-price{
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: .5rem;
+  }
+
+  .card-price .button-card{
+    background-color: #F06400; /* Green */
+    border: none;
+    color: white;
+    padding: 8px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-left: 15px;
+    border-radius: 12px;
+  }
+
+  .card-price .button-card:hover{
+    background-color: #fff!important;
+    color: #F06400!important;
+  }
+  
+
+  @media(min-width: 992px){
+    .nav-item{
+      border-bottom: none;
+    }
+  }
+
+  @media (max-width:768px){
+
+    .products-preview .preview img{
+      height: 25rem;
+    }
+
+  }
+
